--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,6 @@ jobs:
       FREEBSD_VERSION: 15
       XCODE_VERSION: 16.2
       MACOS_SDK_VERSION: 15.2
-      XWIN_DIR: ${{ runner.temp }}/xwin
       TARGET_TRIPLE: ${{ matrix.arch }}-${{ matrix.platform }}
     steps:
       - name: Check out repository code
@@ -30,23 +29,23 @@ jobs:
       - name: Setup VC-LTL
         if: ${{ matrix.platform == 'windows-msvc' }}
         run: |
-          curl -LO --output-dir ${{ runner.temp }} https://github.com/Chuyu-Team/VC-LTL5/releases/download/v${VCLTL_VERSION}/VC-LTL-Binary.7z
-          mkdir ${{ runner.temp }}/VC-LTL
-          tar -xC ${{ runner.temp }}/VC-LTL -f ${{ runner.temp }}/VC-LTL-Binary.7z TargetPlatform
+          curl -LO --output-dir ${RUNNER_TEMP} https://github.com/Chuyu-Team/VC-LTL5/releases/download/v${VCLTL_VERSION}/VC-LTL-Binary.7z
+          mkdir ${RUNNER_TEMP}/VC-LTL
+          tar -xC ${RUNNER_TEMP}/VC-LTL -f ${RUNNER_TEMP}/VC-LTL-Binary.7z TargetPlatform
 
       - name: Setup xwin
         if: ${{ matrix.platform == 'windows-msvc' }}
         run: |
           brew update
           brew install xwin
-          xwin --accept-license --arch ${{ matrix.arch }} --variant desktop --channel release splat --preserve-ms-arch-notation --output ${XWIN_DIR}
+          xwin --accept-license --arch ${{ matrix.arch }} --variant desktop --channel release splat --preserve-ms-arch-notation --output ${RUNNER_TEMP}/xwin
 
       - name: Setup FreeBSD sysroot
         if: ${{ matrix.platform == 'freebsd' }}
         run: |
           FREEBSD_ARCH=$(echo -n ${{ matrix.arch }} | sed 's/^x86_/amd/')
           DIST_VERSION=$(curl https://cgit.freebsd.org/ports/plain/devel/freebsd-sysroot/Makefile | perl -0pe 's/.+\nDISTVERSION=\t(.+?)\n.+/$1/smg')
-          cd ${{ runner.temp }}
+          cd ${RUNNER_TEMP}
           curl -o freebsd-sysroot.pkg https://pkg.freebsd.org/FreeBSD:${FREEBSD_VERSION}:amd64/latest/All/${FREEBSD_ARCH}-freebsd-sysroot-${DIST_VERSION}.pkg
           tar --strip-components=2 xf freebsd-sysroot.pkg
 
@@ -58,8 +57,8 @@ jobs:
           )
           if [[ ${{ matrix.platform }} = windows-msvc ]]; then
             zig_args+=(
-              -Dvc-ltl-dir=${{ runner.temp }}/VC-LTL/TargetPlatform/${VCLTL_TARGET_VERSION}
-              -Dxwin-dir=${XWIN_DIR}
+              -Dvc-ltl-dir=${RUNNER_TEMP}/VC-LTL/TargetPlatform/${VCLTL_TARGET_VERSION}
+              -Dxwin-dir=${RUNNER_TEMP}/xwin
             )
           elif [[ ${{ matrix.platform }} = macos ]]; then
             zig_args+=(
@@ -69,7 +68,7 @@ jobs:
           elif [[ ${{ matrix.platform }} = freebsd ]]; then
             FREEBSD_ARCH=$(echo -n ${{ matrix.arch }} | sed 's/^x86_/amd/')
             zig_args+=(
-              --sysroot ${{ runner.temp }}/freebsd-sysroot/${FREEBSD_ARCH}
+              --sysroot ${RUNNER_TEMP}/freebsd-sysroot/${FREEBSD_ARCH}
             )
           fi
           zig build "${zig_args[@]}"
