--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ jobs:
       matrix:
         arch: [x86_64, aarch64]
         platform: [linux-musl, windows-msvc, macos, freebsd, netbsd]
+        optimize: [Debug, ReleaseSafe, ReleaseFast, ReleaseSmall]
         include:
           - arch: x86
             platform: windows-msvc
@@ -22,6 +23,7 @@ jobs:
       TARGET_ARCH: ${{ matrix.arch }}
       TARGET_PLATFORM: ${{ matrix.platform }}
       TARGET_TRIPLE: ${{ matrix.arch }}-${{ matrix.platform }}
+      OPTIMIZE_MODE: ${{ matrix.optimize }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
@@ -41,6 +43,6 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.TARGET_TRIPLE }}
+          name: ${{ env.TARGET_TRIPLE }}-${{ matrix.optimize }}
           path: gnuplot-${{ env.TARGET_TRIPLE }}.*
           if-no-files-found: error
