--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,40 @@
 name: Build
 on: push
+
+env:
+  OPTIMIZE_MODES: [Debug, ReleaseSafe, ReleaseFast, ReleaseSmall]
+
 jobs:
+  define-matrix:
+    runs-on: ubuntu-24.04-arm
+    outputs:
+      include: ${{ steps.include.outputs.include }}
+    steps:
+      - name: Define include
+        id: include
+        run: |
+          echo "include=$(yq -n -oj -I0 '
+            [
+              { "arch": "x86", "platform": "windows-msvc" },
+              { "arch": "wasm32", "platform": "wasi" }
+            ] as $bases |
+            env(OPTIMIZE_MODES) as $optimizations |
+            [
+              $bases[] as $b |
+              $optimizations[] as $o |
+              $b + { "optimize": $o }
+            ]
+          ')" >> "$GITHUB_OUTPUT"
   build:
+    runs-on: macos-latest
+    needs: define-matrix
     strategy:
       fail-fast: false
       matrix:
         arch: [x86_64, aarch64]
         platform: [linux-musl, windows-msvc, macos, freebsd, netbsd]
-        optimize: [Debug, ReleaseSafe, ReleaseFast, ReleaseSmall]
-        include:
-          - arch: x86
-            platform: windows-msvc
-            optimize: [Debug, ReleaseSafe, ReleaseFast, ReleaseSmall]
-          - arch: wasm32
-            platform: wasi
-            optimize: [Debug, ReleaseSafe, ReleaseFast, ReleaseSmall]
-    runs-on: macos-latest
+        optimize: ${{ env.OPTIMIZE_MODES }}
+        include: ${{ fromJSON(needs.define-matrix.outputs.include) }}
     env:
       XWIN_SDK_VERSION: 10.0.22621
       VCLTL_VERSION: 5.2.2
