fix(ci): use string for environment variables

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     env:
-      ARCH: [x86_64, aarch64]
-      PLATFORM: [linux-musl, windows-msvc, macos, freebsd, netbsd]
-      OPTIMIZE_MODE: [Debug, ReleaseSafe, ReleaseFast, ReleaseSmall]
+      ARCH: "[x86_64, aarch64]"
+      PLATFORM: "[linux-musl, windows-msvc, macos, freebsd, netbsd]"
+      OPTIMIZE_MODE: "[Debug, ReleaseSafe, ReleaseFast, ReleaseSmall]"
     steps:
       - name: Set matrix
         id: set-matrix
